--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,18 @@ stages:
 
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/azure-vote/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'ksv-docker-hub'
+        command: 'login'
+    - task: DockerCompose@0
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'ksv-docker-hub'
+        dockerComposeFile: 'docker-compose.yml'
+        action: 'Build services'
+        additionalImageTags: 'latest'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'ksv-docker-hub'
+        repository: 'sergeykrulikovskiy/ksv-registry'
+        command: 'push'
