Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
       inputs:
         containerregistrytype: 'Container Registry'
         dockerRegistryEndpoint: 'ksv-docker-hub'
-        dockerComposeFile: 'docker-compose.yml'
+        dockerComposeFile: 'docker-compose.yaml'
         action: 'Build services'
         additionalImageTags: 'latest'
     - task: Docker@2
