--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,6 +14,6 @@ steps:
     inputs:
       action: deploy
       kubernetesServiceConnection: azure-vote
-      manifests: $(Build.SourcesDirectory)\azure-vote-all-in-one-redis.yaml
+      manifests: $(Build.SourcesDirectory)/azure-vote-all-in-one-redis.yaml
       namespace: azure-vote-test
 
