--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'Azure Voting App'
+TITLE = 'SCALE - Azure Voting App'
 VOTE1VALUE = 'test SP'
 VOTE2VALUE = 'bbbbb'
 SHOWHOST = 'false'
