--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -16,5 +16,5 @@ steps:
   inputs:
     containerregistrytype: 'Container Registry'
     dockerRegistryEndpoint: 'ksv-docker-hub'
-    dockerComposeFile: '**/docker-compose.yml'
+    dockerComposeFile: '**/docker-compose.yaml'
     action: 'Run services'
