--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -17,5 +17,5 @@ steps:
 - task: Bash@3
   inputs:
     targetType: inline
-    script: docker logs azure-vote-front
+    script: docker logs azure-vote-front -f
     
